fix: add primary z-index to virtual keyboard

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -483,6 +483,7 @@ option:hover {
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
   user-select: none;
   transition: bottom 0.4s;
+  z-index: 999;
 }
 
 .keyboard--hidden {
